package com.rockettrading.rocket_trading.model;

import java.time.Instant;

public class BlotterEntry {
    private String displayStatus;
    private Instant lastUpdatedAt;
}

