package com.rockettrading.rocket_trading.model;

import java.math.BigDecimal;

public class CashAccount {
    private BigDecimal availableBalance;
}

