package com.rockettrading.rocket_trading.model;

public class Instrument {
    private String symbol;
    private String assetClass;
    private boolean tradable;
}

