package com.rockettrading.rocket_trading.model;

import java.math.BigDecimal;

public class Position {
    private long quantity;
    private BigDecimal averageCost;
}

