package com.rockettrading.rocket_trading.model;

import java.math.BigDecimal;

public class PriceAlert {
    private BigDecimal targetPrice;
    private String direction;
}

