package com.rockettrading.rocket_trading.model;

import java.math.BigDecimal;
import java.time.Instant;

public class Quote {
    private BigDecimal price;
    private Instant capturedAt;
}

