classDiagram
    class Client {
        +clientId
        +register()
        +signIn()
    }

    class Session {
        +sessionId
        +expiresAt
        +revoke()
        +isActive()
    }

    class CashAccount {
        +availableBalance
        +reserveForOrder()
        +settleFill()
    }

    class Instrument {
        +symbol
        +assetClass
        +tradable
    }

    class Quote {
        +price
        +capturedAt
        +isCurrent()
    }

    class Order {
        +orderId
        +side
        +quantity
        +status
        +submit()
        +accept()
        +reject()
        +fill()
    }

    class Fill {
        +fillId
        +executionPrice
        +executedQuantity
        +executedAt
    }

    class Position {
        +quantity
        +averageCost
        +applyFill()
    }

    class BlotterEntry {
        +displayStatus
        +lastUpdatedAt
    }

    class AuditEvent {
        +eventType
        +occurredAt
        +recordActor
    }

    class Watchlist {
        +name
        +addInstrument()
        +removeInstrument()
    }

    class PriceAlert {
        +targetPrice
        +direction
        +evaluateAgainstQuote()
    }

    Client "1" --> "0..*" Session : owns
    Client "1" --> "1" CashAccount : funds
    Client "1" --> "0..*" Order : places
    Client "1" --> "0..*" Position : holds
    Client "1" --> "0..*" Watchlist : curates
    Order "*" --> "1" Instrument : targets
    Position "*" --> "1" Instrument : tracks
    Quote "*" --> "1" Instrument : prices
    Order "1" --> "0..1" Quote : executedAgainst
    Order "1" --> "0..1" Fill : resultsIn
    Order "1" --> "1" BlotterEntry : surfacesAs
    Order "1" --> "1..*" AuditEvent : emits
    Fill "*" --> "1" CashAccount : settles
    Fill "*" --> "1" Position : updates
    Watchlist "1" --> "0..*" Instrument : includes
    Watchlist "1" --> "0..*" PriceAlert : contains
    PriceAlert "*" --> "1" Instrument : monitors
